--- a/src/stadline/appBundle/Resources/config/routing.yml
+++ b/src/stadline/appBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 stadlineapp_homepage:
     path:     /
     defaults: { _controller: stadlineappBundle:Default:index }
+
+stadlineapp_annotations:
+    resource: '../src/stadline/appBundle/Controller/'
+    type:     annotation
