--- a/src/stadline/appBundle/Resources/config/services.yml
+++ b/src/stadline/appBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    stadlineapp.example:
-#        class: stadline\appBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+#    stadlineapp.github_finder:
+#        class: stadline\appBundle\Service\GitHubFinder
+#        autowire: true
