--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,6 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         hwi_oauth.user.provider:
@@ -20,12 +19,12 @@ security:
             oauth:
                 resource_owners:
                     github:          "/login/check-github"
-                login_path:        /login
+                login_path:        connect_github
                 use_forward:       false
-                failure_path:      /login
+                failure_path:      connect_github
 
                 oauth_user_provider:
                     service: hwi_oauth.user.provider
 
     access_control:
-        - { path: ^(.*)/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^(.*)/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
